--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-02-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* doc/ja/Makefile.am (EXTRA_DIST): Remove namazu.css.
+
+	* doc/en/Makefile.am (html_DATA): Remove namazu.css.
+
 	* scripts/mknmz.in: s/$conf::MTIME/$var::Opt{'mtime'}/g
 
 	* pl/usage.pl ($USAGE): Modify description for --mtime.
