--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-02-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* doc/Makefile.am (css_DATA): New variable.
+	(cssdir): Likewise.
+
 	* doc/ja/Makefile.am (EXTRA_DIST): Remove namazu.css.
 
 	* doc/en/Makefile.am (html_DATA): Remove namazu.css.
