--- a/NEWS
+++ b/NEWS
@@ -2,22 +2,26 @@ Overview of Changes in Namazu 2.0 - Feb 20, 2000
 
 * NLS support using GNU gettext is added.
 * Using GNU automake-1.4.
+* The configure script determine hostname and domainname.
 * Namazu core search engine library is provided.
 * Using GNU libtool-1.3.3.
 * Perl XSUB module support for mknmz is added.
 * New index structure has no compatibility with previous one.
 * Index size is reduced by about 50%.
+* Updating index become more easier. 
 * namazu and namazu.cgi are separated.
 * Using File::MMagic perl module for file type detection.
 * New filters are added. MS Word, PDF, TeX, etc.
-* Access control support by NMZ.access.
+* Support access control by NMZ.access.
 * Customizable results display by NMZ.result.
+* Display NMZ.tips if nothing matches.
 * Support sorting results in an arbitrary field.
 * Keyword emphasizing in results display.
 * Support long options for namazu and mknmz.
 * Check point (Re-execution) support for mknmz.
 * New config file mknmzrc is introduced.
 * Old config file namazu.conf is renamed to namazurc.
+* Config file parser is improved.
 * bnamazu is refined.
 * New tool nmzgrep is included.
 * New nmz-config helper script is included.
