--- a/tknamazu/ChangeLog
+++ b/tknamazu/ChangeLog
@@ -1,3 +1,14 @@
+2000-02-20  Ken-ichi Hirose  <kenzo-@tama.or.jp>
+
+	* tknamazu.hlp.ja: some info add.
+
+	* tknamazu.hlp.ja_JP.SJIS: New file. convert from tknamazu.hlp.ja.
+
+	* tknamazu.tcl.in(Quit): Dialog make myself.
+	(LoadResources): change value sepalater TAB to SPACE.
+
+	* Makefile.am(pkgdata_DATA): Add tknamazu.hlp.ja_JP.SJIS.
+
 2000-02-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* tknamazu.hlp.ja: Change URI of Namazu website.
