--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* nmz/util.c (nmz_isnumstr): Simplified.  [namazu-dev 1692]
+
 2000-02-19  Kenji Suzuki  <kenji@po.ganseki.ne.jp>
 
         * filter/hnf.pl: support new hnf command, RLNEW, RLSUB.
