--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-20  Ryuji Abe <raeva@t3.rim.or.jp>
+
+	* src/Makefile.am (namazu_cgi_LDFLAGS): Removed.
+
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* nmz/util.c (nmz_isnumstr): Simplified.  [namazu-dev 1692]
