--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* pl/conf.pl.in ($ALLOW_FILE): Fix quotation bug. [namazu-dev
+	1705] 
+
 	* nmz/util.c (nmz_isnumstr): Simplified.  [namazu-dev 1692]
 
 2000-02-19  Kenji Suzuki  <kenji@po.ganseki.ne.jp>
