--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2000-02-20  Ryuji Abe <raeva@t3.rim.or.jp>
 
+	* nmz/hlist.c: s/__CYGWIN32__/__CYGWIN__/g.
+
+	* nmz/search.c: Likewise.
+
+	* nmz/libnamazu.c: Likewise.
+
+	* src/namazu-cgi.c: Likewise.
+
+	* src/namazu-cgi.c: s/WIN32/_WIN32/g.
+
 	* src/Makefile.am (namazu_cgi_LDFLAGS): Removed.
 
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
