--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,10 @@
 
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* doc/en/Makefile.am (html_DATA): Remove nmz.html
+
+	* doc/en/nmz.html: Removed temporally.
+	
 	* pl/conf.pl.in ($ALLOW_FILE): Fix quotation bug. [namazu-dev
 	1705] 
 	($ALLOW_FILE): Add \d+.
