--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,12 @@
 
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* pl/util.pl (tmpnam): Do not use $$.
+
+	* pl/util.pl (remove_tmpfiles): Likewise.
+
+	* scripts/mknmz.in (update_field_index): Likewise.
+	
 	* doc/en/Makefile.am (html_DATA): Remove nmz.html
 
 	* doc/en/nmz.html: Removed temporally.
