--- a/tknamazu/ChangeLog
+++ b/tknamazu/ChangeLog
@@ -1,5 +1,15 @@
 2000-02-20  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
+	* tknamazu.tcl.in: commandline bug fix.
+
+	* tknamazu.hlp.ja: references bug fix.
+
+	* tknamazu.hlp.ja_JP.SJIS: Likewise.
+
+	* tknamazurc.in: SMARTBROWSE and HEADERWIPE default value set.
+
+2000-02-20  Ken-ichi Hirose  <kenzo-@tama.or.jp>
+
 	* tknamazu.hlp.en: rewrite.
 
 	* tknamazurc.in: rewrite.
