--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,11 @@
 
 2000-02-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/util.c (nmz_isnumstr): Do not use isdigit(). [namazu-dev
+	1718] 
+
+  	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 2.0.
+
 	* pl/util.pl (tmpnam): Do not use $$.
 
 	* pl/util.pl (remove_tmpfiles): Likewise.
