--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-02-21  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* scripts/mknmz.in (codeconv_document): New function.
+	(load_document): Call codeconv_document() after pre_codeconv()
+	and post_codeconv() processing. [namazu-dev 1744]
+
 	* nmz/util.c (nmz_isnumstr): Fix isdigit() related
 	bug. [namazu-dev 1731] 
 
