--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
 2000-02-21  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* pl/conf.pl.in ($ALLOW_FILE): Add the pattern for man files and
+	reformated. 
+
 	* scripts/mknmz.in (codeconv_document): New function.
 	(load_document): Call codeconv_document() after pre_codeconv()
 	and post_codeconv() processing. [namazu-dev 1744]
 	(codeconv_document): Handle both CR+LR and CR  well.
 	(add_target): Fix ALLOW_FILE, DENY_FILE bug. [namazu 1455]
+	(add_target): Remove (\.gz|\.Z|\.bz2)? from patterns.
 
 	* nmz/util.c (nmz_isnumstr): Fix isdigit() related
 	bug. [namazu-dev 1731] 
