* scripts/mknmz.in (check_file): Handle files excluded by 	robots.txt. [namazu 1477]
	* filter/html.pl (parse_robots_txt): Change message.

	* scripts/mknmz.in (namazu_core): Remove isexcluded() related
	codes.

	* filter/html.pl (isexcluded): Moved from mknmz.in. [namazu 1477]

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-22  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* POTFILES.in: Add filter/html.pl
+
 2000-02-16  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* POTFILES.in: Add pl/var.pl.in
