--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2000-02-22  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* scripts/mknmz.in (check_file): Handle files excluded by
+	robots.txt. [namazu 1477]
+
+	* filter/html.pl (parse_robots_txt): Change message.
+
+	* scripts/mknmz.in (namazu_core): Remove isexcluded() related
+	codes. 
+
+	* filter/html.pl (isexcluded): Moved from mknmz.in. [namazu 1477]
+
 	* scripts/mknmz.in (load_filters): Fix post_codeconv() bug.
 	(load_document): Add debug messages.
 
