--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-24  KOSEKI Yoshinori  <kose@yk.NetLaputa.ne.jp>
+
+	* namazu.el (namazu-make-field-completion-alist): Fix, namazu-dir`s'.
+
 2000-02-16  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
 	* namazu.el: New face setting, if (eq hilit-background-mode 'dark).
