--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-23 22:00+0900\n"
+"POT-Creation-Date: 2000-02-25 15:46+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -758,7 +758,8 @@ msgid ""
 "\n"
 "Miscellaneous:\n"
 "  -s, --checkpoint         turn on the checkpoint mechanism.\n"
-"  -f, --config=FILE        set the config file to FILE.\n"
+"  -C, --show-config        show the current configuration.\n"
+"  -f, --config=FILE        use FILE as a config file.\n"
 "  -I, --include=FILE       include your customization FILE.\n"
 "  -O, --output-dir=DIR     set DIR to output the index.\n"
 "  -T, --template-dir=DIR   set DIR having NMZ.{head,foot,body}.*.\n"
@@ -789,8 +790,7 @@ msgstr ""
 "  -r, --replace=CODE       URIを置換するためのコードを指定する\n"
 "  -o, --ole                OLEの文書フィルタを用いる (Windows環境のみ)\n"
 "      --mtime=INT          変更日制限 find(1) の -mtime と同じ規則\n"
-"                           例: -50 で 50 日以内、+50 で 50 "
-"日より古いものだけ\n"
+"                           例: -50 で 50 日以内、+50 で 50 日より古いものだけ\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
@@ -815,6 +815,7 @@ msgstr ""
 "\n"
 "その他:\n"
 "  -s, --checkpoint        チェックポイント機構を作動させる\n"
+"  -C, --show-config       現在の設定を表示する\n"
 "  -f, --config=FILE       設定ファイルを指定する\n"
 "  -I, --include=FILE      カスタマイズ用ファイルを読み込む\n"
 "  -O, --output-dir=DIR    インデックスの出力先を指定する\n"
