--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-02-23 22:00+0900\n"
+"POT-Creation-Date: 2000-02-25 15:46+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -699,7 +699,8 @@ msgid ""
 "\n"
 "Miscellaneous:\n"
 "  -s, --checkpoint         turn on the checkpoint mechanism.\n"
-"  -f, --config=FILE        set the config file to FILE.\n"
+"  -C, --show-config        show the current configuration.\n"
+"  -f, --config=FILE        use FILE as a config file.\n"
 "  -I, --include=FILE       include your customization FILE.\n"
 "  -O, --output-dir=DIR     set DIR to output the index.\n"
 "  -T, --template-dir=DIR   set DIR having NMZ.{head,foot,body}.*.\n"
