--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-25  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* configure.in (LTVERSION): Set 3:1:0.
+
 2000-02-25  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* pl/usage.pl: Add description of --show-config option.
