--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -95,8 +95,11 @@ do not detect update and deleted documents.
 \fB\-s\fR, \fB\-\-checkpoint\fR
 turn on the checkpoint mechanism.
 .TP
+\fB\-C\fR, \fB\-\-show\-config\fR
+show the current configuration.
+.TP
 \fB\-f\fR, \fB\-\-config\fR=\fIFILE\fR
-set the config file to FILE.
+use FILE as a config file.
 .TP
 \fB\-I\fR, \fB\-\-include\fR=\fIFILE\fR
 include your customization FILE.
