--- a/man/namazu.1
+++ b/man/namazu.1
@@ -71,6 +71,9 @@ print current configuration.
 \fB\-q\fR, \fB\-\-quiet\fR
 do not display extra messages except search results.
 .TP
+\fB\-d\fR, \fB\-\-debug\fR
+be debug mode.
+.TP
 \fB\-v\fR, \fB\-\-version\fR
 show the version of namazu and exit.
 .TP
